<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ColorBlenderMain" android:id="@+id/coordinatorLayout">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/appBarLayout">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@drawable/painttrail">

            <TextView
                    android:text="@string/bigC"
                    android:layout_width="47dp"
                    android:layout_height="56dp" android:id="@+id/bigC"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp" android:textStyle="bold"
                    android:textSize="44sp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.074" android:fontFamily="casual"
                    android:translationY="-2dp"
                    android:textColor="@android:color/holo_red_dark"/>
            <TextView
                    android:text="@string/lower_o"
                    android:layout_width="48dp"
                    android:layout_height="52dp" android:id="@+id/textView5"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp" android:textStyle="bold"
                    android:textSize="42sp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.144" android:fontFamily="casual"
                    android:translationY="-2dp"
                    android:textColor="@android:color/holo_orange_dark"/>
            <TextView
                    android:text="@string/lower_l"
                    android:layout_width="48dp"
                    android:layout_height="52dp" android:id="@+id/textView6"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp" android:textStyle="bold"
                    android:textSize="42sp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.21" android:fontFamily="casual"
                    android:translationY="-2dp"
                    android:textColor="#e6e600"/>
            <TextView
                    android:text="@string/lower_o"
                    android:layout_width="60dp"
                    android:layout_height="52dp" android:id="@+id/textView7"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp" android:textStyle="bold"
                    android:textSize="42sp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.259" android:fontFamily="casual"
                    android:translationY="-2dp"
                    android:textColor="@android:color/holo_green_dark"/>
            <TextView
                    android:text="@string/lower_r"
                    android:layout_width="48dp"
                    android:layout_height="52dp" android:id="@+id/textView8"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp" android:textStyle="bold"
                    android:textSize="42sp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.308" android:fontFamily="casual"
                    android:translationY="-2dp"
                    android:textColor="#0000FF"/>
            <TextView
                    android:text="@string/big_M"
                    android:layout_width="48dp"
                    android:layout_height="52dp" android:id="@+id/textView9"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp" android:textStyle="bold"
                    android:textSize="42sp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.397" android:fontFamily="casual"
                    android:translationY="-2dp"
                    android:textColor="#0000FF"/>
            <TextView
                    android:text="@string/lower_i"
                    android:layout_width="48dp"
                    android:layout_height="52dp" android:id="@+id/textView10"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp" android:textStyle="bold"
                    android:textSize="42sp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.498" android:fontFamily="casual"
                    android:translationY="-2dp"
                    android:textColor="@android:color/holo_green_dark"/>
            <TextView
                    android:text="@string/lower_x"
                    android:layout_width="48dp"
                    android:layout_height="52dp" android:id="@+id/textView11"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp" android:textStyle="bold"
                    android:textSize="42sp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.536" android:fontFamily="casual"
                    android:translationY="-2dp"
                    android:textColor="#e6e600"/>
            <TextView
                    android:text="@string/lower_e"
                    android:layout_width="48dp"
                    android:layout_height="52dp" android:id="@+id/textView12"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp" android:textStyle="bold"
                    android:textSize="42sp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.608" android:fontFamily="casual"
                    android:translationY="-2dp"
                    android:textColor="@android:color/holo_orange_dark"/>
            <TextView
                    android:text="@string/lower_r"
                    android:layout_width="48dp"
                    android:layout_height="52dp" android:id="@+id/textView13"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp" android:textStyle="bold"
                    android:textSize="42sp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.674" android:fontFamily="casual"
                    android:translationY="-2dp"
                    android:textColor="@android:color/holo_red_dark"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" android:id="@+id/include"/>

</android.support.design.widget.CoordinatorLayout>